fix: fixed bug that caused overflowing

--- a/src/app/features/unit/card/unit-card.component.scss
+++ b/src/app/features/unit/card/unit-card.component.scss
@@ -8,6 +8,9 @@
   $content-width: 53%;
   background-image: url('../../../../assets/cards/card-unit.webp');
   height: 465px;
+  max-height: 465px;
+  overflow: hidden;
+
   aspect-ratio: 21 / 25;
   display: flex;
   align-items: center;
@@ -32,52 +35,58 @@
     border-radius: 5px;
   }
 
-  &__title {
-    text-shadow: 0px 5.97315px 5.97315px rgba(0, 0, 0, 0.25);
-  }
-
   &__title,
-  &__start-time,
   &__description {
     background-color: st.$primary-400;
     border: 1px solid st.$accent-gold-400;
     border-radius: 5px;
   }
 
-  &__title,
-  &__start-time {
+  &__title {
+    max-height: 1.5em;
+    text-shadow: 0px 5.97315px 5.97315px rgba(0, 0, 0, 0.25);
     color: st.$accent-gold-200;
     letter-spacing: 1px;
+    padding: 0 0.5rem;
     text-align: center;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 
   &__description {
     margin-top: 8px;
-    margin-bottom: 8px;
     color: st.$neutral-300;
-    height: 75%;
-    max-height: 75%;
-    overflow: hidden;
-    padding: 0.6rem 0.5rem;
+    max-height: 111px;
     display: flex;
     align-items: center;
-  }
+    border-collapse: separate;
 
-  &__description > p {
-    text-align: center;
-    line-height: 1.3;
+    &__inner {
+      min-height: 80px;
+      margin: 0.6em 0.5rem;
+      max-height: 101px;
+      overflow: hidden;
+      & > p {
+        text-align: center;
+        line-height: 1.3;
+      }
+    }
   }
 
   &__info {
     width: $content-width;
+    max-height: 150px;
     @include margin(15px);
+    border-collapse: separate;
   }
 
   &__line {
     height: 1px;
     width: $content-width;
     background-color: st.$accent-gold-400;
-    @include margin(20px);
+    @include margin(10px);
+    border-collapse: separate;
   }
 
   &__button {
@@ -97,11 +106,19 @@
     @include margin(30px);
   }
   .card__info {
+    max-height: 130px;
     @include margin(5px);
   }
 
-  .card__info__description {
+  .card__description {
+    max-height: 100px;
     margin: 7px 0;
+  }
+
+  .card__description__inner {
+    min-height: 70px;
+
+    max-height: 90px;
   }
   .card__main-photo > img {
     height: 95%;
@@ -110,10 +127,14 @@
     font-size: 0.87rem;
   }
   .card__line {
-    @include margin(15px);
+    @include margin(10px);
   }
 
   .card__button {
-    @include margin(15px);
+    @include margin(18px);
   }
+}
+.center-horizontally {
+  display: flex;
+  align-items: center;
 }
